product/springcloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: springcloud
  labels:
    name: springcloud
